--- a/index.html
+++ b/index.html
@@ -51,9 +51,10 @@
           </div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav pull-right">
-              <li><a href="">Goldenberries</a></li>
-              <li><a href="">Passionfruit</a></li>
-              <li><a href="">Tamarillos</a></li>
+              <li><a href="#goldenberries" id="goldenberrylink">Goldenberries</a></li>
+              <li><a href="#tamarillos" id="tamarillolink">Tamarillos</a></li>
+              <li><a href="#passionfruit" id="passionfruitlink">Passionfruit</a></li>
+              
             </ul>
             </div><!--/.navbar-collapse -->
           </div>
@@ -69,7 +70,7 @@
       <!--insta widget sidebar -->
     
       <div class="insta-sidebar col-md-3 pull-right">
-      <h4><small>Insta-Sidebar of the Farm</small></h4>
+      <h4><small>The Instagram Feed of the Farm</small></h4>
       <script src="//instansive.com/widget/js/instansive.js"></script><iframe src="//instansive.com/widgets/d84f1ff227ff1a87599ec88f74532d2204bc0e03.html" id="instansive_d84f1ff227" name="instansive_d84f1ff227"  scrolling="no" allowtransparency="true" class="instansive-widget" style="width: 50%; border: 0; overflow: hidden;"></iframe>
       </div>
     <!-- *******************-->
@@ -105,7 +106,9 @@
         </div>
         <!-- ********************* -->
     <div class="instawidget">
-    <!-- INSTANSIVE WIDGET --><script src="//instansive.com/widget/js/instansive.js"></script><iframe class="instawidget" src="//instansive.com/widgets/3b7c235820247bec1abc86145e5f160323d992eb.html" id="instansive_3b7c235820" name="instansive_3b7c235820"  scrolling="no" allowtransparency="true" class="instansive-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
+    <!-- INSTANSIVE WIDGET 5-->
+  <!-- INSTANSIVE WIDGET --><script src="//instansive.com/widget/js/instansive.js"></script><iframe src="//instansive.com/widgets/1df96acf9d4e35e5784ad483586141b4485279dc.html" id="instansive_1df96acf9d" name="instansive_1df96acf9d"  scrolling="no" allowtransparency="true" class="instansive-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
+    <!--10 widget<script src="//instansive.com/widget/js/instansive.js"></script><iframe class="instawidget" src="//instansive.com/widgets/3b7c235820247bec1abc86145e5f160323d992eb.html" id="instansive_3b7c235820" name="instansive_3b7c235820"  scrolling="no" allowtransparency="true" class="instansive-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>-->
     </div>
 
 <div class="intro">
@@ -119,7 +122,7 @@
 
 
 
-<h1>goldenberries <small>as tangy-tasty as they are packed full of antioxidants and bioflavonoids</small></h1>
+<h1 id="goldenberries">goldenberries <small>as tangy-tasty as they are packed full of antioxidants and bioflavonoids</small></h1>
 
 <!--************************CAROUSEL*************************-->
 <div class="carousel slide" id="myCarousel">
@@ -157,7 +160,7 @@
           <a data-slide="next" class="right carousel-control" href="#myCarousel"><span class="icon-next"></span></a>
           </div>
 <!--****************** end carousel **********************-->
-<h1>tamarillos <small>succulant, piquant, tropical - a mix of kiwi, tomato, and passionfruit</small></h1>
+<h1 id="tamarillos">tamarillos <small>succulant, piquant, tropical - a mix of kiwi, tomato, and passionfruit</small></h1>
 <!--************************CAROUSEL2*************************-->
 <div class="carousel slide" id="myCarousel2">
   <!-- Indicators -->
@@ -194,7 +197,7 @@
           <a data-slide="next" class="right carousel-control" href="#myCarousel2"><span class="icon-next"></span></a>
           </div>
 <!--****************** end carousel **********************-->
-<h1>passionfruit <small>dreamily aromatic, sweet and tart</small></h1>
+<h1 id="passionfruit">passionfruit <small>dreamily aromatic, sweet and tart</small></h1>
 <!--************************CAROUSEL3*************************-->
 <div class="carousel slide" id="myCarousel3">
   <!-- Indicators -->
@@ -272,6 +275,7 @@
            <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
         <script src="js/vendor/bootstrap.min.js"></script>
+        <script src="js/jquery-scrollto.js"></script>
         <script src="js/main.js"></script>
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
