--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link href="css/bootstrap-glyphicons.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   <style>
   body {
   /* padding-top: 50px; */
@@ -98,7 +99,7 @@
         </div>
         <div class="col-sm-4">
 
-            <a class="btn btn-default btn-block btn-sm buy" href="https://instagram.com/edulis8/" target="_blank">
+            <a class="btn btn-default btn-block btn-sm buy" href="store.html" target="_blank">
               <span class="glyphicon glyphicon-shopping-cart"></span>
               <p><strong>buy fruit &raquo;</strong></p>
             </a>
@@ -241,17 +242,17 @@
           <div class="container">
         
           <div class="col-sm-4">
-            <p class="text-muted">&copy; created by edulis, 2015</p>
+            <p class="text-muted"><i class="fa fa-copyright"></i> created by edulis, 2015</p>
           </div>
           <div class="col-sm-4">
             <p class="text-muted">
               Follow Edulis Gardens:
               <ul class="social">
-                <li><a href="https://instagram.com/edulis8/">Instagram</a></li>
-                <li><a href="https://twitter.com/edulis8">Twitter</a></li>
+                <li><i class="fa fa-instagram"></i></i> <a href="https://instagram.com/edulis8/">Instagram</a></li>
+                <li><i class="fa fa-twitter"></i> <a href="https://twitter.com/edulis8">Twitter</a></li>
                 <hr class="soften">
                 <li class="text-muted">Email:</li>
-                <li> <a href="mailto:eric@edulisgardens.com">eric@edulisgardens.com</a></li>
+                <li><i class="fa fa-envelope"></i> <a href="mailto:eric@edulisgardens.com">eric@edulisgardens.com</a></li>
               </ul>
               
             </p>
